--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
-      background-color: #000; /* nền web đen */
+      background-color: #000;
       color: #fff;
     }
 
@@ -151,25 +151,6 @@
     button.discord:hover {
       background-color: #4752c4;
     }
-
-    /* Nút Music */
-    #musicBtn {
-      position: fixed;
-      right: 20px;
-      bottom: 20px;
-      z-index: 4000;
-      background-color: #000; /* nền đen */
-      color: #fff; /* chữ trắng */
-      border: none;
-      padding: 12px 16px;
-      font-size: 18px;
-      cursor: pointer;
-      border-radius: 6px;
-    }
-
-    #musicBtn:hover {
-      background-color: #111;
-    }
   </style>
 </head>
 <body>
@@ -185,9 +166,8 @@
     <div class="logo" id="logo">Saki-Hub</div>
   </header>
 
-  <!-- Nút phát nhạc -->
-  <button id="musicBtn">▶️</button>
-  <audio id="bgm" src="bgm.mp3" loop></audio>
+  <!-- Nhạc tự play -->
+  <audio id="bgm" src="bgm.mp3" loop autoplay></audio>
 
   <!-- Sidebar menu -->
   <div class="dropdown-content" id="dropdownMenu">
@@ -209,10 +189,7 @@
     const dropdownMenu = document.getElementById('dropdownMenu');
     const mainContent = document.getElementById('mainContent');
     const logo = document.getElementById('logo');
-
-    const musicBtn = document.getElementById('musicBtn');
     const bgm = document.getElementById('bgm');
-    let isPlaying = false;
 
     window.addEventListener('load', () => {
       setTimeout(() => {
@@ -220,6 +197,7 @@
         mainContent.classList.add('show');
         const page = new URLSearchParams(window.location.search).get("page") || localStorage.getItem("currentPage") || "home";
         showPage(page);
+        bgm.play().catch(()=>{}); // đảm bảo auto play
       }, 1000);
     });
 
@@ -230,18 +208,6 @@
     window.addEventListener('click', (e) => {
       if (!menuBtn.contains(e.target) && !dropdownMenu.contains(e.target)) {
         dropdownMenu.classList.remove('show');
-      }
-    });
-
-    musicBtn.addEventListener('click', () => {
-      if(isPlaying){
-        bgm.pause();
-        isPlaying = false;
-        musicBtn.textContent = "▶️";
-      } else {
-        bgm.play();
-        isPlaying = true;
-        musicBtn.textContent = "⏸️";
       }
     });
 
