--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       align-items: center;
       justify-content: center;
       padding: 10px 0;
-      background-color: #000; /* nền đen */
+      background-color: #111;
       position: sticky;
       top: 0;
       z-index: 1000;
@@ -42,11 +42,12 @@
       top: 50%;
       transform: translateY(-50%);
       background-color: #000; /* nền đen */
-      color: #fff;
+      color: white;
       padding: 10px 16px;
       font-size: 20px;
       border: none;
       cursor: pointer;
+      border-radius: 0;
     }
 
     .dropbtn:hover {
@@ -64,15 +65,14 @@
       overflow-x: hidden;
       transition: 0.3s;
       z-index: 2000;
-      padding-top: 0;
+      padding-top: 60px;
     }
 
     .dropdown-content a {
       display: block;
       padding: 15px 20px;
-      color: #fff; /* chữ trắng */
+      color: #fff;
       text-decoration: none;
-      background-color: #000; /* nền đen */
     }
 
     .dropdown-content a:hover {
@@ -84,13 +84,13 @@
     }
 
     .sidebar-logo {
-      color: #fff; /* chữ trắng */
-      font-size: 20px;
-      font-weight: bold;
+      color: #fff;
+      font-size: 18px;
       margin: 0;
-      padding: 20px 12px;
-      background-color: #000; /* nền đen */
+      padding: 15px 12px;
       text-align: left;
+      background-color: #000; /* nền đen */
+      border-bottom: 1px solid #111;
     }
 
     /* Container nội dung */
@@ -98,7 +98,7 @@
       max-width: 800px;
       margin: 40px auto;
       padding: 20px;
-      background-color: #000; /* nền đen */
+      background-color: #000;
       opacity: 0;
       transition: opacity 0.5s ease;
     }
@@ -114,7 +114,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: #000; /* nền đen */
+      background-color: #000;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -137,7 +137,7 @@
     }
 
     /* Nút Discord */
-    button.discord {
+    button {
       background-color: #5865F2;
       color: white;
       border: none;
@@ -148,7 +148,7 @@
       transition: 0.2s;
     }
 
-    button.discord:hover {
+    button:hover {
       background-color: #4752c4;
     }
   </style>
@@ -166,9 +166,6 @@
     <div class="logo" id="logo">Saki-Hub</div>
   </header>
 
-  <!-- Nhạc tự play -->
-  <audio id="bgm" src="bgm.mp3" loop autoplay></audio>
-
   <!-- Sidebar menu -->
   <div class="dropdown-content" id="dropdownMenu">
     <div class="sidebar-logo">Saki-Hub</div>
@@ -183,6 +180,9 @@
     <p>Toàn bộ web có nền màu đen, chữ trắng. Đây là nội dung Home mặc định.</p>
   </div>
 
+  <!-- Nhạc nền -->
+  <audio id="bgm" src="bgm.mp3" loop></audio>
+
   <script>
     const overlay = document.getElementById('overlay');
     const menuBtn = document.getElementById('menuBtn');
@@ -191,49 +191,88 @@
     const logo = document.getElementById('logo');
     const bgm = document.getElementById('bgm');
 
+    let isMusicPlayed = false;
+
+    // Hide overlay sau khi load web
     window.addEventListener('load', () => {
       setTimeout(() => {
         overlay.style.display = 'none';
         mainContent.classList.add('show');
+
+        // Load page từ URL nếu có
         const page = new URLSearchParams(window.location.search).get("page") || localStorage.getItem("currentPage") || "home";
         showPage(page);
-        bgm.play().catch(()=>{}); // đảm bảo auto play
       }, 1000);
     });
 
+    // Toggle sidebar
     menuBtn.addEventListener('click', () => {
       dropdownMenu.classList.toggle('show');
+
+      // Tự phát nhạc khi người click dropdown lần đầu
+      if(!isMusicPlayed){
+        bgm.play().catch(()=>{}); // thử play
+        isMusicPlayed = true;
+      }
     });
 
+    // Click ngoài sidebar thì tắt
     window.addEventListener('click', (e) => {
-      if (!menuBtn.contains(e.target) && !dropdownMenu.contains(e.target)) {
+      if (!menuBtn.contains(e.target) && !dropdownMenu.contains(e.target)){
         dropdownMenu.classList.remove('show');
       }
     });
 
+    // Khi người click logo cũng tự phát nhạc lần đầu
+    logo.addEventListener('click', () => {
+      if(!isMusicPlayed){
+        bgm.play().catch(()=>{});
+        isMusicPlayed = true;
+      }
+      showPage('home');
+    });
+
+    // Hàm hiển thị nội dung
     function showPage(page){
       overlay.style.display = 'flex';
       mainContent.classList.remove('show');
+
       setTimeout(() => {
         if(page === 'home'){
-          mainContent.innerHTML = `<h1>Giới thiệu</h1><p>Toàn bộ web có nền màu đen, chữ trắng. Đây là nội dung Home.</p>`;
+          mainContent.innerHTML = `
+            <h1>Giới thiệu</h1>
+            <p>Toàn bộ web có nền màu đen, chữ trắng. Đây là nội dung Home.</p>
+          `;
         } else if(page === 'script'){
-          mainContent.innerHTML = `<h1>Script</h1><p>Đây là phần Script. Nội dung vẫn nền đen, chữ trắng.</p>`;
+          mainContent.innerHTML = `
+            <h1>Script</h1>
+            <p>Đây là phần Script. Nội dung vẫn nền đen, chữ trắng.</p>
+          `;
         } else if(page === 'connect'){
-          mainContent.innerHTML = `<h1>Connect</h1><p>Đây là phần Connect. Nội dung nền đen, chữ trắng.</p><button class="discord" id="discordBtn">Join my server</button>`;
-          document.getElementById("discordBtn").addEventListener("click", () => {
+          mainContent.innerHTML = `
+            <h1>Connect</h1>
+            <p>Đây là phần Connect. Nội dung nền đen, chữ trắng.</p>
+            <button id="discordBtn">Join my server</button>
+          `;
+          // gắn sự kiện cho nút Discord
+          const discordBtn = document.getElementById("discordBtn");
+          discordBtn.addEventListener("click", () => {
             window.open("https://discord.gg/cHrynR4E", "_blank");
           });
         }
         overlay.style.display = 'none';
         mainContent.classList.add('show');
+
+        // Lưu page hiện tại
         localStorage.setItem("currentPage", page);
+        // Cập nhật URL
         const url = new URL(window.location);
         url.searchParams.set('page', page);
         window.history.replaceState({}, '', url);
       }, 800);
     }
 
+    // Menu click
     const links = dropdownMenu.querySelectorAll('a');
     links.forEach(link => {
       link.addEventListener('click', (e) => {
@@ -242,10 +281,6 @@
         showPage(page);
         dropdownMenu.classList.remove('show');
       });
-    });
-
-    logo.addEventListener('click', () => {
-      showPage('home');
     });
   </script>
 </body>
