--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
       position: sticky;
       top: 0;
       z-index: 1000;
-      position: relative;
     }
 
     .logo {
@@ -32,7 +31,7 @@
       cursor: pointer;
       color: #fff;
       background-color: #000;
-      padding: 5px 12px;
+      padding: 5px 10px;
     }
 
     /* Nút ba gạch */
@@ -65,17 +64,7 @@
       overflow-x: hidden;
       transition: 0.3s;
       z-index: 2000;
-    }
-
-    .dropdown-content a {
-      display: block;
-      padding: 15px 20px;
-      color: #fff;
-      text-decoration: none;
-    }
-
-    .dropdown-content a:hover {
-      background-color: #111;
+      padding-top: 0;
     }
 
     .dropdown-content.show {
@@ -90,10 +79,17 @@
       text-align: left;
       background-color: #000;
       border-bottom: 1px solid #111;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
+    }
+
+    .dropdown-content a {
+      display: block;
+      padding: 15px 20px;
+      color: #fff;
+      text-decoration: none;
+    }
+
+    .dropdown-content a:hover {
+      background-color: #111;
     }
 
     /* Container nội dung */
@@ -154,7 +150,6 @@
     button:hover {
       background-color: #4752c4;
     }
-
   </style>
 </head>
 <body>
@@ -197,8 +192,7 @@
         overlay.style.display = 'none';
         mainContent.classList.add('show');
 
-        // Load page từ URL hoặc localStorage
-        const page = new URLSearchParams(window.location.search).get("page") || localStorage.getItem("currentPage") || "home";
+        const page = localStorage.getItem("currentPage") || "home";
         showPage(page);
       }, 1000);
     });
@@ -246,9 +240,6 @@
         mainContent.classList.add('show');
 
         localStorage.setItem("currentPage", page);
-        const url = new URL(window.location);
-        url.searchParams.set('page', page);
-        window.history.replaceState({}, '', url);
       }, 800);
     }
 
