--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       color: #fff;
     }
 
-    /* Header */
     header {
       display: flex;
       align-items: center;
@@ -31,11 +30,8 @@
       font-weight: bold;
       cursor: pointer;
       color: #fff;
-      background-color: #000;
-      padding: 5px 10px;
     }
 
-    /* Nút ba gạch */
     .dropbtn {
       position: absolute;
       left: 0;
@@ -54,7 +50,6 @@
       background-color: #222;
     }
 
-    /* Sidebar */
     .dropdown-content {
       height: 100vh;
       width: 220px;
@@ -93,7 +88,6 @@
       background-color: #111;
     }
 
-    /* Container nội dung */
     .container {
       max-width: 800px;
       margin: 40px auto;
@@ -107,7 +101,6 @@
       opacity: 1;
     }
 
-    /* Overlay load */
     #overlay {
       position: fixed;
       top: 0;
@@ -121,7 +114,6 @@
       z-index: 3000;
     }
 
-    /* Spinner */
     .spinner {
       border: 6px solid #111;
       border-top: 6px solid #fff;
@@ -136,7 +128,6 @@
       100% { transform: rotate(360deg);}
     }
 
-    /* Nút Discord */
     button.discord {
       background-color: #5865F2;
       color: white;
@@ -155,118 +146,106 @@
 </head>
 <body>
 
-  <!-- Overlay Load -->
-  <div id="overlay">
-    <div class="spinner"></div>
-  </div>
+<div id="overlay">
+  <div class="spinner"></div>
+</div>
 
-  <!-- Header -->
-  <header>
-    <button class="dropbtn" id="menuBtn">☰</button>
-    <div class="logo" id="logo">Saki-Hub</div>
-  </header>
+<header>
+  <button class="dropbtn" id="menuBtn">☰</button>
+  <div class="logo" id="logo">Saki-Hub</div>
+</header>
 
-  <!-- Sidebar menu -->
-  <div class="dropdown-content" id="dropdownMenu">
-    <div class="sidebar-logo">Saki-Hub</div>
-    <a href="#" data-page="home">Home</a>
-    <a href="#" data-page="script">Script</a>
-    <a href="#" data-page="connect">Connect</a>
-  </div>
+<div class="dropdown-content" id="dropdownMenu">
+  <div class="sidebar-logo">Saki-Hub</div>
+  <a href="#" data-page="home">Home</a>
+  <a href="#" data-page="script">Script</a>
+  <a href="#" data-page="connect">Connect</a>
+</div>
 
-  <!-- Nội dung chính -->
-  <div class="container" id="mainContent">
-    <h1>Giới thiệu</h1>
-    <p>Toàn bộ web có nền màu đen, chữ trắng. Đây là nội dung Home mặc định.</p>
-  </div>
+<div class="container" id="mainContent">
+  <h1>Giới thiệu</h1>
+  <p>Toàn bộ web có nền màu đen, chữ trắng. Đây là nội dung Home mặc định.</p>
+</div>
 
-  <script>
-    const overlay = document.getElementById('overlay');
-    const menuBtn = document.getElementById('menuBtn');
-    const dropdownMenu = document.getElementById('dropdownMenu');
-    const mainContent = document.getElementById('mainContent');
-    const logo = document.getElementById('logo');
+<script>
+  const overlay = document.getElementById('overlay');
+  const menuBtn = document.getElementById('menuBtn');
+  const dropdownMenu = document.getElementById('dropdownMenu');
+  const mainContent = document.getElementById('mainContent');
+  const logo = document.getElementById('logo');
 
-    // Hide overlay sau khi load web
-    window.addEventListener('load', () => {
-      setTimeout(() => {
-        overlay.style.display = 'none';
-        mainContent.classList.add('show');
+  window.addEventListener('load', () => {
+    setTimeout(() => {
+      overlay.style.display = 'none';
+      mainContent.classList.add('show');
 
-        // Load page từ URL nếu có, nếu không lấy localStorage
-        const page = new URLSearchParams(window.location.search).get("page") || localStorage.getItem("currentPage") || "home";
-        showPage(page);
-      }, 1000);
-    });
+      // Load page từ URL hoặc localStorage
+      const page = new URLSearchParams(window.location.search).get("page") || localStorage.getItem("currentPage") || "home";
+      showPage(page);
+    }, 1000);
+  });
 
-    // Toggle sidebar
-    menuBtn.addEventListener('click', () => {
-      dropdownMenu.classList.toggle('show');
-    });
+  menuBtn.addEventListener('click', () => {
+    dropdownMenu.classList.toggle('show');
+  });
 
-    // Click ngoài sidebar thì tắt
-    window.addEventListener('click', (e) => {
-      if (!menuBtn.contains(e.target) && !dropdownMenu.contains(e.target)) {
-        dropdownMenu.classList.remove('show');
-      }
-    });
-
-    // Hàm hiển thị nội dung
-    function showPage(page){
-      overlay.style.display = 'flex';
-      mainContent.classList.remove('show');
-
-      setTimeout(() => {
-        if(page === 'home'){
-          mainContent.innerHTML = `
-            <h1>Giới thiệu</h1>
-            <p>Toàn bộ web có nền màu đen, chữ trắng. Đây là nội dung Home.</p>
-          `;
-        } else if(page === 'script'){
-          mainContent.innerHTML = `
-            <h1>Script</h1>
-            <p>Đây là phần Script. Nội dung vẫn nền đen, chữ trắng.</p>
-          `;
-        } else if(page === 'connect'){
-          mainContent.innerHTML = `
-            <h1>Connect</h1>
-            <p>Đây là phần Connect. Nội dung nền đen, chữ trắng.</p>
-            <button id="discordBtn" class="discord">Join my server</button>
-          `;
-          const discordBtn = document.getElementById("discordBtn");
-          discordBtn.addEventListener("click", () => {
-            window.open("https://discord.gg/cHrynR4E", "_blank");
-          });
-        }
-
-        overlay.style.display = 'none';
-        mainContent.classList.add('show');
-
-        // Lưu page hiện tại
-        localStorage.setItem("currentPage", page);
-
-        // Cập nhật URL
-        const url = new URL(window.location);
-        url.searchParams.set('page', page);
-        window.history.replaceState({}, '', url);
-      }, 800);
+  window.addEventListener('click', (e) => {
+    if (!menuBtn.contains(e.target) && !dropdownMenu.contains(e.target)) {
+      dropdownMenu.classList.remove('show');
     }
+  });
 
-    // Menu click
-    const links = dropdownMenu.querySelectorAll('a');
-    links.forEach(link => {
-      link.addEventListener('click', (e) => {
-        e.preventDefault();
-        const page = link.getAttribute('data-page');
-        showPage(page);
-        dropdownMenu.classList.remove('show');
-      });
-    });
+  function showPage(page){
+    overlay.style.display = 'flex';
+    mainContent.classList.remove('show');
 
-    // Click logo về Home
-    logo.addEventListener('click', () => {
-      showPage('home');
+    setTimeout(() => {
+      if(page === 'home'){
+        mainContent.innerHTML = `
+          <h1>Giới thiệu</h1>
+          <p>Toàn bộ web có nền màu đen, chữ trắng. Đây là nội dung Home.</p>
+        `;
+      } else if(page === 'script'){
+        mainContent.innerHTML = `
+          <h1>Script</h1>
+          <p>Đây là phần Script. Nội dung vẫn nền đen, chữ trắng.</p>
+        `;
+      } else if(page === 'connect'){
+        mainContent.innerHTML = `
+          <h1>Connect</h1>
+          <p>Đây là phần Connect. Nội dung nền đen, chữ trắng.</p>
+          <button id="discordBtn" class="discord">Join my server</button>
+        `;
+        const discordBtn = document.getElementById("discordBtn");
+        discordBtn.addEventListener("click", () => {
+          window.open("https://discord.gg/cHrynR4E", "_blank");
+        });
+      }
+
+      overlay.style.display = 'none';
+      mainContent.classList.add('show');
+
+      localStorage.setItem("currentPage", page);
+      const url = new URL(window.location);
+      url.searchParams.set('page', page);
+      window.history.replaceState({}, '', url);
+    }, 800);
+  }
+
+  const links = dropdownMenu.querySelectorAll('a');
+  links.forEach(link => {
+    link.addEventListener('click', (e) => {
+      e.preventDefault();
+      const page = link.getAttribute('data-page');
+      showPage(page);
+      dropdownMenu.classList.remove('show');
     });
-  </script>
+  });
+
+  logo.addEventListener('click', () => {
+    showPage('home');
+  });
+</script>
+
 </body>
 </html>
