--- a/index.html
+++ b/index.html
@@ -236,17 +236,17 @@
       if(page === 'home'){
         mainContent.innerHTML = `
           <h1>Giới thiệu</h1>
-          <p>Toàn bộ web có nền màu đen, chữ trắng. Đây là nội dung Home.</p>
+          <p>kcj.</p>
         `;
       } else if(page === 'script'){
         mainContent.innerHTML = `
           <h1>Script</h1>
-          <p>Đây là phần Script. Nội dung vẫn nền đen, chữ trắng.</p>
+          <p>Nothing.</p>
         `;
       } else if(page === 'connect'){
         mainContent.innerHTML = `
           <h1>Connect</h1>
-          <p>Đây là phần Connect. Nội dung nền đen, chữ trắng.</p>
+          <p>Nothing.</p>
           <button id="discordBtn" class="discord">Join my server</button>
         `;
         const discordBtn = document.getElementById("discordBtn");
