--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         `;
         const discordBtn = document.getElementById("discordBtn");
         discordBtn.addEventListener("click", () => {
-          window.open("https://discord.gg/cHrynR4E", "_blank");
+          window.open("https://discord.gg/YSfqv7ee", "_blank");
         });
       }
 
