--- a/index.html
+++ b/index.html
@@ -195,8 +195,8 @@
 </div>
 
 <div class="container" id="mainContent">
-  <h1>Giới thiệu</h1>
-  <p>Toàn bộ web có nền màu đen, chữ trắng. Đây là nội dung Home mặc định.</p>
+  <h1>Home</h1>
+  <p>.</p>
 </div>
 
 <script>
