--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Saki Hup - Blox Fruits Event Track</title>
+  <title>Saki Hub - Blox Fruits Event Tracker</title>
 
   <link rel="icon" type="image/png" href="logo.png">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -391,7 +391,7 @@
 </div>
 
 <footer>
-  <p>&copy; 2025 Saki Hub. All rights reserved.</p>
+  <p>&copy; 2024 Saki Hub. All rights reserved.</p>
   <p>Blox Fruits Event Tracking System</p>
 </footer>
 
